# vors-ting

./: .bandit.yml  .gitignore  .markdownlint.json  AGENTS.md  LICENSE  READEME.md  README.md  main.py  providers.yaml  pyproject.toml
.beans/: workspace-0m5e--phase-8-cli-entry-point-update.md  workspace-9cs1--phase-3-baseagent-refactor.md  workspace-a852--verification-checklist-and-rollback-plan.md  workspace-aikw--migration-litellm-pydantic-ai.md  workspace-es5v--phase-6-curatoragent-update.md  workspace-qev7--phase-2-structured-output-schemas.md  workspace-r0o2--phase-1-dependencies-add-pydantic-ai-remove-litell.md  workspace-tjiu--phase-5-creatoragent-update.md  workspace-tqmd--phase-7-orchestrator-async-update.md  workspace-ud1o--phase-4-revieweragent-update.md  workspace-wmk5--phase-10-optional-pydantic-graph-for-orchestration.md  workspace-y561--phase-9-test-updates.md
.github/workflows/: ci.yml
devcontainer/: .dockerignore  Dockerfile.god  Dockerfile.kimi  Dockerfile.mcp-gateway  compose.yaml  mcp.json  start.sh
devcontainer/kimi-config/: agent.yaml  config.toml-example  kimi.json  mcp.json
docs/: CODING_STANDARDS.md  CONTRIBUTING.md  Developer Decision-Making Framework.md  README.md  TOOLS.md  agents.md  design.md  development_guide.md  monads-in-python.md  personas-design-notes.md  readme-rules.md
docs/concepts/: edge-cases.md  glossary.md  interaction-patterns.md  review-framework.md  review-types.md  socratic-sparring-templates.md  socratic-sparring.md
docs/design/: decisions.md  memory-system.md
docs/development/: environment.md  migration-to-pydantic-ai.md
docs/development/adl/: README.md
docs/graphs/: triple-creator-review-loops-no-sage.mmd  triple-creator-review-loops-with-sage.mmd
docs/implementation/: coding-standards.md  phases.md  test-strategy.md
docs/operations/: configuration-reference.md  metrics-reference.md  runbook.md  troubleshooting.md
docs/user/: getting-started.md
docs/user/examples/: README.md
examples/: csharp_coding_standards_bestPractices.md  csharp_coding_standards_functional.md  csharp_coding_standards_polydactic.yaml  csharp_coding_standards_security_soc2.md  polyadic_config.yaml  simple_config.yaml  test_config.yaml
scripts/: update_providers.py
src/templates/: feedback-with-sage.md  pre-sage-feedback.md
src/vors_ting/: __init__.py  cli.py
src/vors_ting/agents/: __init__.py  base.py  creator.py  curator.py  reviewer.py  schemas.py
src/vors_ting/core/: __init__.py  config.py  logging.py
src/vors_ting/orchestration/: __init__.py  orchestrator.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_e2e.py  test_logging.py  test_orchestrator.py
