[project]
name = "vors-ting"
version = "0.1.0"
description = "Multi-Agent Critical Feedback Scaffolding"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "litellm>=1.81.11",
    "mypy>=1.19.1",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "ruff>=0.15.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "typer>=0.23.1",
]

[tool.uv]
dev-dependencies = [
    "black>=24.0",
    "mypy>=1.0",
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "W", "I", "N", "D", "UP", "YTT", "S", "B", "A", "C4", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
